k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: abrnoc
  labels:
    name: abrnoc
